--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "sass-loader": "^7.3.1",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "glob-parent": "^6.0.1"
   }
 }
